option go_package = "./protopb";

message RevenueOverBudget {
  required double sumRevenueOverBudget = 1;
  required int64 amountReviews = 2;
  required string clientId = 3;
  required int64 messageId = 4;
  optional bool eof = 5;
}
